minor fix button gap

--- a/src/app/commander/candidate/candidate-profile/candidate-profile.component.css
+++ b/src/app/commander/candidate/candidate-profile/candidate-profile.component.css
@@ -73,6 +73,13 @@ body {
   font-size: 1.2rem;
 }
 
+.text-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 400px;
+}
+
 @media (max-width: 400px) {
   .rounded-circle {
     width: 60px;
@@ -85,5 +92,12 @@ body {
     position: absolute;
     left: 70%;
     z-index: 2;
+  }
+
+  .text-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
 }
